# noname

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_README.md  CHANGELOG.md  CONFIGURATION_SETUP.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  MODERNIZATION_SUMMARY.md  Makefile  Makefile.build  README.md  RSI_BOLLINGER_STRATEGY_IMPLEMENTATION_TASKS.md  RSI_BOLLINGER_STRATEGY_IMPROVEMENT_ROADMAP.md  SECURITY.md  SIGNAL_MANAGER_MIGRATION_GUIDE.md  STATE_MANAGEMENT_MIGRATION_SUMMARY.md  TELEGRAM_NOTIFICATION_FIX.md  app.py  build.ps1  build_exe.py  check_balance.py  check_notification_status.py  check_production_mode.py  check_trade_history.py  clear_browser_cache.py  clear_cache_and_restart.py  config.yml  config3.yml  docker-compose.dev.yml  docker-compose.yml  env.example  globals.py  n0name.py  optimized_n0name.py  pyproject.toml  requirements.txt  secure_config.bak  secure_config.enc  (+6 more)
.github/workflows/: build-executable.yml  ci.yml
archive/: 04_check_condition.py
archive/old-versions/: test_performance.py
auth/: key_encryption.py  key_enryption.py  secure_config.py  security_manager.py
config/: default.yml  development.yml
config/environments/: production.yml
config/infrastructure/redis/: redis.conf
config/nginx/: nginx.conf
docs/: ENVIRONMENT_VARIABLES.md  MARGIN_SELECTION.md  README.md
docs/api/: endpoints.md  manager.md
docs/deployment/: docker.md
docs/developer-guide/: ARCHITECTURE_IMPROVEMENTS.md  LOCALHOST_SETUP.md  PRODUCTION_SETUP.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md  STATE_MANAGEMENT_GUIDE.md  contributing.md  performance.md  testing.md
docs/guides/migration/: API_MANAGER_MIGRATION_GUIDE.md  ASYNC_OPTIMIZATION_GUIDE.md  CLIENT_MANAGER_GUIDE.md  ENHANCED_LOGGING_SUMMARY.md  LOGGING_EXCEPTION_MIGRATION_GUIDE.md  MONITORING_SYSTEM_GUIDE.md  SECURITY_IMPLEMENTATION_GUIDE.md  TESTING_INFRASTRUCTURE_SUMMARY.md  TRADING_REFACTORING_GUIDE.md
docs/guides/modernization/: guide.md
docs/guides/optimization/: guide.md  summary.md
docs/user-guide/: configuration.md  installation.md  trading-strategies.md  troubleshooting.md
examples/: api_manager_integration_example.py  client_manager_example.py  enhanced_logging_demo.py  monitoring_integration_example.py
scripts/: build.py  show_env_vars.ps1  show_env_vars.py
scripts/deployment/: deploy.sh
src/: async_main.py  check_condition.py  check_trending.py  control_position.py  create_order.py  indicators.py  init_start.py  open_position.py  optimized_open_position.py  position_value.py  refactored_trading_main.py
src/backtesting/: backtest_pipeline.py  backtesting_strategy.py  fetch_data.py  get_input_from_user.py  result_export.py
src/core/: base_strategy.py  order_manager.py  position_manager.py  trading_engine.py
src/indicators/: enhanced_macd_fibonacci.py  macd_fibonacci.py  rsi_bollinger.py
src/monitoring/: __init__.py  alert_manager.py  health_checker.py  monitoring_dashboard.py  performance_monitor.py  system_monitor.py
src/n0name/: __init__.py  cli.py  exceptions.py  types.py
src/n0name/config/: __init__.py  models.py
src/n0name/di/: __init__.py  container.py
src/n0name/interfaces/: __init__.py  trading_protocols.py
src/n0name/strategies/: __init__.py  factory.py
src/n0name_trading_bot.egg-info/: PKG-INFO
src/strategies/: __init__.py  macd_fibonacci_strategy.py  rsi_bollinger_strategy.py
src/utils/: __init__.py  condition_utils.py
tests/: conftest.py  run_tests.py  test_api_manager.py  test_client_manager.py
tests/integration/: test_trading_integration.py
tests/unit/: test_position_manager.py  test_trading_engine.py
tools/security/: security_config.py  setup_security.py
utils/: __init__.py  adjust_leverage.py  api_manager.py  async_binance_client.py  async_influxdb_client.py  async_signal_manager.py  async_utils.py  calculate_quantity.py  client_manager.py  config2.yml  current_status.py  cursor_movement.py  enhanced_logging.py  exceptions.py  fetch_data.py  globals.py  initial_adjustments.py  load_config.py  logging.py  margin_selector.py  optimized_database.py  optimized_fetch_data.py  optimized_indicators.py  performance_optimizer.py  position_opt.py  send_notification.py  signal_globals.py  signal_manager.py  state_manager.py  state_manager_example.py  stepsize_precision.py  test_config.py  test_signal_manager.py  test_state_manager.py  tmpt8lhkpl_.yml  windows_asyncio_fixes.py
utils/influxdb/: csv_writer.py  db_status_check.py  inf_db_initializer.py  inf_send_data.py
utils/web_ui/: MIGRATION_SUMMARY.md  __init__.py  generate_certificates.py  modify_hosts.py  npm_run_dev.py  update_web_ui.py
utils/web_ui/project/: README.md  __init__.py  index.html  tailwind.config.js  vite.config.ts
utils/web_ui/project/api/: __init__.py  main.py  main2.py  secure_main.py
utils/web_ui/project/certs/: localhost-cert.pem.backup  localhost-key.pem.backup
utils/web_ui/project/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
utils/web_ui/project/src/components/: AnalysisCharts.tsx  ConfigurationGuard.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  HistoricalPositions.tsx  LoadingSpinner.tsx  Navigation.tsx  PositionCard.tsx  SecureLogin.tsx  SmoothUpdater.tsx  TradingConditions.tsx  WalletCard.tsx
utils/web_ui/project/src/config/: api.ts
utils/web_ui/project/src/contexts/: AppContext.tsx  ThemeContext.tsx
utils/web_ui/project/src/hooks/: useApi.ts  useWebSocket.ts
utils/web_ui/project/src/pages/: ConfigurationSetup.tsx  Dashboard.tsx  PositionAnalysis.tsx  PositionChart-dev.tsx  PositionChart.tsx  Settings.tsx  TradingConditionChart.tsx  TradingConditionsPage.tsx  WalletOverview.tsx
